src/main/gen/generated/cblite/GeneratedParser.java
// This is a generated file. Not intended for manual editing.
package generated.cblite;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static generated.cblite.GeneratedTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class GeneratedParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return script(b, l + 1);
  }

  /* ********************************************************** */
  // identifier-ref
  public static boolean alias(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alias")) return false;
    if (!nextTokenIs(b, "<alias>", BACKTICK, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ALIAS, "<alias>");
    r = identifier_ref(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // any-every-operator identifier-ref IN expression SATISFIES expression END
  public static boolean any_every_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "any_every_expression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ANY_EVERY_EXPRESSION, "<any every expression>");
    r = any_every_operator(b, l + 1);
    r = r && identifier_ref(b, l + 1);
    r = r && consumeToken(b, IN);
    r = r && expression(b, l + 1);
    r = r && consumeToken(b, SATISFIES);
    r = r && expression(b, l + 1);
    r = r && consumeToken(b, END);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ((ANY | SOME) AND EVERY) | (ANY | SOME) | EVERY
  public static boolean any_every_operator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "any_every_operator")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ANY_EVERY_OPERATOR, "<any every operator>");
    r = any_every_operator_0(b, l + 1);
    if (!r) r = any_every_operator_1(b, l + 1);
    if (!r) r = consumeToken(b, EVERY);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (ANY | SOME) AND EVERY
  private static boolean any_every_operator_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "any_every_operator_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = any_every_operator_0_0(b, l + 1);
    r = r && consumeTokens(b, 0, AND, EVERY);
    exit_section_(b, m, null, r);
    return r;
  }

  // ANY | SOME
  private static boolean any_every_operator_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "any_every_operator_0_0")) return false;
    boolean r;
    r = consumeToken(b, ANY);
    if (!r) r = consumeToken(b, SOME);
    return r;
  }

  // ANY | SOME
  private static boolean any_every_operator_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "any_every_operator_1")) return false;
    boolean r;
    r = consumeToken(b, ANY);
    if (!r) r = consumeToken(b, SOME);
    return r;
  }

  /* ********************************************************** */
  // LBRACKET (expression (COMMA expression)*)? RBRACKET
  public static boolean array_literal(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_literal")) return false;
    if (!nextTokenIs(b, LBRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACKET);
    r = r && array_literal_1(b, l + 1);
    r = r && consumeToken(b, RBRACKET);
    exit_section_(b, m, ARRAY_LITERAL, r);
    return r;
  }

  // (expression (COMMA expression)*)?
  private static boolean array_literal_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_literal_1")) return false;
    array_literal_1_0(b, l + 1);
    return true;
  }

  // expression (COMMA expression)*
  private static boolean array_literal_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_literal_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expression(b, l + 1);
    r = r && array_literal_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA expression)*
  private static boolean array_literal_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_literal_1_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!array_literal_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "array_literal_1_0_1", c)) break;
    }
    return true;
  }

  // COMMA expression
  private static boolean array_literal_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_literal_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // literal |
  //     array-literal |
  //     dict-literal |
  //     (op-prefix base-expression) |
  //     (EXISTS select-expression) |
  //     case-expression |
  //     any-every-expression |
  //     identifier-ref |
  //     function-call |
  //     property |
  //     (LPAREN expression RPAREN)
  public static boolean base_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "base_expression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BASE_EXPRESSION, "<base expression>");
    r = literal(b, l + 1);
    if (!r) r = array_literal(b, l + 1);
    if (!r) r = dict_literal(b, l + 1);
    if (!r) r = base_expression_3(b, l + 1);
    if (!r) r = base_expression_4(b, l + 1);
    if (!r) r = case_expression(b, l + 1);
    if (!r) r = any_every_expression(b, l + 1);
    if (!r) r = identifier_ref(b, l + 1);
    if (!r) r = function_call(b, l + 1);
    if (!r) r = property(b, l + 1);
    if (!r) r = base_expression_10(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // op-prefix base-expression
  private static boolean base_expression_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "base_expression_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = op_prefix(b, l + 1);
    r = r && base_expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // EXISTS select-expression
  private static boolean base_expression_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "base_expression_4")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EXISTS);
    r = r && select_expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // LPAREN expression RPAREN
  private static boolean base_expression_10(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "base_expression_10")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && expression(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // expr5 NOT? BETWEEN expr5 AND expr5
  public static boolean between_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "between_expression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BETWEEN_EXPRESSION, "<between expression>");
    r = expr5(b, l + 1);
    r = r && between_expression_1(b, l + 1);
    r = r && consumeToken(b, BETWEEN);
    r = r && expr5(b, l + 1);
    r = r && consumeToken(b, AND);
    r = r && expr5(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // NOT?
  private static boolean between_expression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "between_expression_1")) return false;
    consumeToken(b, NOT);
    return true;
  }

  /* ********************************************************** */
  // TRUE | FALSE
  public static boolean boolean_literal(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "boolean_literal")) return false;
    if (!nextTokenIs(b, "<boolean literal>", FALSE, TRUE)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BOOLEAN_LITERAL, "<boolean literal>");
    r = consumeToken(b, TRUE);
    if (!r) r = consumeToken(b, FALSE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // FUNCS LPAREN ( expr ( COMMA expr )* )? RPAREN
  public static boolean builtin_function(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "builtin_function")) return false;
    if (!nextTokenIs(b, FUNCS)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, FUNCS, LPAREN);
    r = r && builtin_function_2(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, BUILTIN_FUNCTION, r);
    return r;
  }

  // ( expr ( COMMA expr )* )?
  private static boolean builtin_function_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "builtin_function_2")) return false;
    builtin_function_2_0(b, l + 1);
    return true;
  }

  // expr ( COMMA expr )*
  private static boolean builtin_function_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "builtin_function_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EXPR);
    r = r && builtin_function_2_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ( COMMA expr )*
  private static boolean builtin_function_2_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "builtin_function_2_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!builtin_function_2_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "builtin_function_2_0_1", c)) break;
    }
    return true;
  }

  // COMMA expr
  private static boolean builtin_function_2_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "builtin_function_2_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, COMMA, EXPR);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // CASE expression?
  //     (WHEN expression THEN expression)+
  //     (ELSE expression)? END
  public static boolean case_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_expression")) return false;
    if (!nextTokenIs(b, CASE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CASE);
    r = r && case_expression_1(b, l + 1);
    r = r && case_expression_2(b, l + 1);
    r = r && case_expression_3(b, l + 1);
    r = r && consumeToken(b, END);
    exit_section_(b, m, CASE_EXPRESSION, r);
    return r;
  }

  // expression?
  private static boolean case_expression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_expression_1")) return false;
    expression(b, l + 1);
    return true;
  }

  // (WHEN expression THEN expression)+
  private static boolean case_expression_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_expression_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = case_expression_2_0(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!case_expression_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "case_expression_2", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // WHEN expression THEN expression
  private static boolean case_expression_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_expression_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, WHEN);
    r = r && expression(b, l + 1);
    r = r && consumeToken(b, THEN);
    r = r && expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (ELSE expression)?
  private static boolean case_expression_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_expression_3")) return false;
    case_expression_3_0(b, l + 1);
    return true;
  }

  // ELSE expression
  private static boolean case_expression_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_expression_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ELSE);
    r = r && expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // COLLATE (collation | (LPAREN collation+ RPAREN))
  public static boolean collate_suffix(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "collate_suffix")) return false;
    if (!nextTokenIs(b, COLLATE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COLLATE);
    r = r && collate_suffix_1(b, l + 1);
    exit_section_(b, m, COLLATE_SUFFIX, r);
    return r;
  }

  // collation | (LPAREN collation+ RPAREN)
  private static boolean collate_suffix_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "collate_suffix_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = collation(b, l + 1);
    if (!r) r = collate_suffix_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // LPAREN collation+ RPAREN
  private static boolean collate_suffix_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "collate_suffix_1_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && collate_suffix_1_1_1(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  // collation+
  private static boolean collate_suffix_1_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "collate_suffix_1_1_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = collation(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!collation(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "collate_suffix_1_1_1", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // NOUNICODE | NOCASE | NODIACRITICS | UNICODE | CASE | DIACRITICS
  public static boolean collation(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "collation")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COLLATION, "<collation>");
    r = consumeToken(b, NOUNICODE);
    if (!r) r = consumeToken(b, NOCASE);
    if (!r) r = consumeToken(b, NODIACRITICS);
    if (!r) r = consumeToken(b, UNICODE);
    if (!r) r = consumeToken(b, CASE);
    if (!r) r = consumeToken(b, DIACRITICS);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // OPEN_CURLY (dict-property (COMMA dict-property)*)?
  public static boolean dict_literal(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dict_literal")) return false;
    if (!nextTokenIs(b, OPEN_CURLY)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OPEN_CURLY);
    r = r && dict_literal_1(b, l + 1);
    exit_section_(b, m, DICT_LITERAL, r);
    return r;
  }

  // (dict-property (COMMA dict-property)*)?
  private static boolean dict_literal_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dict_literal_1")) return false;
    dict_literal_1_0(b, l + 1);
    return true;
  }

  // dict-property (COMMA dict-property)*
  private static boolean dict_literal_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dict_literal_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = dict_property(b, l + 1);
    r = r && dict_literal_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA dict-property)*
  private static boolean dict_literal_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dict_literal_1_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!dict_literal_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "dict_literal_1_0_1", c)) break;
    }
    return true;
  }

  // COMMA dict-property
  private static boolean dict_literal_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dict_literal_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && dict_property(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // string-literal SEMICOLON expression
  public static boolean dict_property(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dict_property")) return false;
    if (!nextTokenIs(b, "<dict property>", DQUOTE, QUOTE)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DICT_PROPERTY, "<dict property>");
    r = string_literal(b, l + 1);
    r = r && consumeToken(b, SEMICOLON);
    r = r && expression(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // DQUOTE double-quoted-string-character* DQUOTE
  public static boolean double_quoted_string(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "double_quoted_string")) return false;
    if (!nextTokenIs(b, DQUOTE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DQUOTE);
    r = r && double_quoted_string_1(b, l + 1);
    r = r && consumeToken(b, DQUOTE);
    exit_section_(b, m, DOUBLE_QUOTED_STRING, r);
    return r;
  }

  // double-quoted-string-character*
  private static boolean double_quoted_string_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "double_quoted_string_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!double_quoted_string_character(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "double_quoted_string_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // ESCAPE_SEQUENCE
  //                                         | ESCAPED_DQUOTE
  //                                        | STRING_CHAR
  public static boolean double_quoted_string_character(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "double_quoted_string_character")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DOUBLE_QUOTED_STRING_CHARACTER, "<double quoted string character>");
    r = consumeToken(b, ESCAPE_SEQUENCE);
    if (!r) r = consumeToken(b, ESCAPED_DQUOTE);
    if (!r) r = consumeToken(b, STRING_CHAR);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // BACKTICK IDENTIFIER BACKTICK
  public static boolean escaped_identifier(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "escaped_identifier")) return false;
    if (!nextTokenIs(b, BACKTICK)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, BACKTICK, IDENTIFIER, BACKTICK);
    exit_section_(b, m, ESCAPED_IDENTIFIER, r);
    return r;
  }

  /* ********************************************************** */
  // base-expression (DOT property-path)?
  public static boolean expr0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr0")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPR_0, "<expr 0>");
    r = base_expression(b, l + 1);
    r = r && expr0_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (DOT property-path)?
  private static boolean expr0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr0_1")) return false;
    expr0_1_0(b, l + 1);
    return true;
  }

  // DOT property-path
  private static boolean expr0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DOT);
    r = r && property_path(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // expr0 (op-prec_1 expr0)*
  public static boolean expr1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr1")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPR_1, "<expr 1>");
    r = expr0(b, l + 1);
    r = r && expr1_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (op-prec_1 expr0)*
  private static boolean expr1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr1_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!expr1_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expr1_1", c)) break;
    }
    return true;
  }

  // op-prec_1 expr0
  private static boolean expr1_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr1_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = op_prec_1(b, l + 1);
    r = r && expr0(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // expr1 (op-prec_2 expr1)*
  public static boolean expr2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr2")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPR_2, "<expr 2>");
    r = expr1(b, l + 1);
    r = r && expr2_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (op-prec_2 expr1)*
  private static boolean expr2_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr2_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!expr2_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expr2_1", c)) break;
    }
    return true;
  }

  // op-prec_2 expr1
  private static boolean expr2_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr2_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = op_prec_2(b, l + 1);
    r = r && expr1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // expr2 (op-prec_3 expr2)*
  public static boolean expr3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr3")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPR_3, "<expr 3>");
    r = expr2(b, l + 1);
    r = r && expr3_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (op-prec_3 expr2)*
  private static boolean expr3_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr3_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!expr3_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expr3_1", c)) break;
    }
    return true;
  }

  // op-prec_3 expr2
  private static boolean expr3_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr3_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = op_prec_3(b, l + 1);
    r = r && expr2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // expr3 (op-prec_4 expr3)*
  public static boolean expr4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr4")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPR_4, "<expr 4>");
    r = expr3(b, l + 1);
    r = r && expr4_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (op-prec_4 expr3)*
  private static boolean expr4_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr4_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!expr4_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expr4_1", c)) break;
    }
    return true;
  }

  // op-prec_4 expr3
  private static boolean expr4_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr4_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = op_prec_4(b, l + 1);
    r = r && expr3(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // expr4 (op-prec_5 expr4)*
  public static boolean expr5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr5")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPR_5, "<expr 5>");
    r = expr4(b, l + 1);
    r = r && expr5_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (op-prec_5 expr4)*
  private static boolean expr5_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr5_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!expr5_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expr5_1", c)) break;
    }
    return true;
  }

  // op-prec_5 expr4
  private static boolean expr5_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr5_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = op_prec_5(b, l + 1);
    r = r && expr4(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }
